--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,3 +1,3 @@
 FROM openjdk:8-jdk-alpine
-COPY east-mod.jar /opt
-ENTRYPOINT java $JAVA_OPS -jar /opt/meco.jar
+COPY meco-0.0.1-SNAPSHOT.jar /opt
+ENTRYPOINT java $JAVA_OPS -jar /opt/meco-0.0.1-SNAPSHOT.jar
