--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,3 +1,3 @@
-FROM openjdk:8-jdk-alpine
+FROM openjdk:11.0-slim-buster
 COPY meco-0.0.1-SNAPSHOT.jar /opt
 ENTRYPOINT java $JAVA_OPS -jar /opt/meco-0.0.1-SNAPSHOT.jar
